# IdaSharp

./: .gitignore  CMakeLists.txt  IdaSharp.nuspec  IdaSharp.props  IdaSharp.sln  IdaSharp.targets  LICENSE  README.md  USAGE.md  build.bat  build.sh  pack-nuget.sh  test-package.sh
.github/workflows/: build.yml  release.yml
IdaSharp/: Ida.cs  IdaException.cs  IdaSharp.csproj
IdaSharp/Enums/: NamedTypeFlags.cs  NefFlags.cs
IdaSharp/Native/: libida.cs  libidalib.cs
include/: idasharp.h
src/: lib.cpp
